--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2094,10 +2094,67 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Collage Erstellen";
 "collage_create_info" = "Klicken Sie auf Plus, um eine Collage zu erstellen";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Danke, dass Sie uns kontaktiert haben. Ihre Anfrage wurde zur Überprüfung an Cellfie Mobile weitergeleitet. Wir werden mit ihnen alle notwendigen Informationen teilen, die Sie zur Verfügung stellen, wie Informationen über Ihr Gerät, lifebox-Nutzungsinformationen, Kontaktinformationen und persönliche Informationen, um das Problem zu untersuchen. Fotos/Videos und andere Inhalte, die Sie auf lifebox hochladen, werden nicht mit Cellfire Mobile geteilt.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Die Datei (%@), die Sie filtern möchten, wurde nicht gefunden.";
 "contact_us_complaint_cellfie" = "Danke, dass Sie uns kontaktiert haben. Ihre Anfrage wurde zur Überprüfung an Cellfie Mobile weitergeleitet. Wir werden mit ihnen alle notwendigen Informationen teilen, die Sie zur Verfügung stellen, wie Informationen über Ihr Gerät, lifebox-Nutzungsinformationen, Kontaktinformationen und persönliche Informationen, um das Problem zu untersuchen. Fotos/Videos und andere Inhalte, die Sie auf lifebox hochladen, werden nicht mit Cellfire Mobile geteilt.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
+"Office_Filter_Not_Found" = "Die Datei, die Sie zu filtern versucht haben (%@), wurde nicht gefunden.";
+"new_print" = "Neuen Druck Erstellen";
+"print_info_popup_title" = "5 Fotos Auswählen";
+"print_info_popup_subtitle" = "Wählen Sie bis zu 5 Fotos aus, die Sie diesen Monat drucken und sich nach Hause liefern lassen möchten.";
+"print_info_popup_checkbox" = "Zeigen Sie diese Warnung nicht mehr an.";
+"print_select_photo_button" = "Foto Auswählen";
+"print_select_photo_screen" = "Foto Auswählen";
+"print_select_photo_screen_bar" = "Zum Drucken ausgewählt";
+"print_continue_button" = "Weiter";
+"print_missing_photo_popup_title" = "Sie senden %d Anzahl von Fotos zum Drucken";
+"print_missing_photo_popup_subtitle" = "Sie haben noch %d Fotos zu versenden. Wenn Sie fortfahren, können Sie die restlichen %d Fotos in diesem Monat nicht mehr versenden";
+"create_cell_popup" = "Arbeitsblatt Erstellen";
+"create_slide_popup" = "Folie Erstellen";
+"kktc_restore_info" = "Kuzey Kıbrıs Turkcell-Kunden können ihre Mitgliedschaft in ihrer Leitung beginnen, indem sie LIFEBOX 50GB für 50 GB lifebox-paket, LIFEBOX 500GB für lifebox 500 GB-paket und LIFEBOX 2.5TB für lifebox 2,5TB-paket eingeben und an 3030 senden.";
+"edit_printphoto_info_label" = "Klicken Sie auf das zu bearbeitende Foto";
+"print_edit_photo_page_name" = "Foto Bearbeiten";
+"print_photo_bad_quality_info" = "Das von Ihnen ausgewählte Foto ist kleiner als %d MB. Dies führt zu einem Verlust an Druckqualität.";
+"print_photo_bad_quality_continue" = "Fahren Sie mit dem ausgewählten Foto fort.";
+"print_photo_bad_quality_new" = "Wählen Sie ein anderes Foto.";
+"no_print_package_info" = "Diese Funktion ist in Ihren bestehenden Paketen nicht verfügbar.";
+"print_package_question" = "Möchten Sie sich Ihr Druckpaket ansehen?";
+"print_package_view" = "Paket Ansehen";
+"printed_photo_card_title" = "Mein Druckpaket";
+"printed_photo_card_info" = "Lassen Sie jeden Monat 5 Fotos drucken.";
+"printed_photo_card_body" = "Lassen Sie Ihre Fotos drucken.";
+"printed_photo_card_body_no_right" = "Sie haben Ihr Recht auf Fotodruck genutzt.";
+"printed_photo_card_info_no_right" = "Sie können ab dem Datum %d nachdrucken.";
+"printed_package_view" = "Meine Druckpakete anzeigen";
+"more_photo_right" = "Sie haben mehr als %d Fotos eingereicht. Sind Sie sicher, dass Sie fortfahren möchten?";
+"no_more_photo_right" = "Sie haben mehr als %d Fotos ausgewählt. Reduzieren Sie, um fortzufahren.";
+"timeline_header" = "Die besten Erinnerungen an das Jahr 2023";
+"timeline_description" = "Wir haben für Sie die besten Erinnerungen an dieses Jahr zusammengestellt. Schau sie dir jetzt an!";
+"selected_for_print" = "Zum Drucken ausgewählt";
+"print_cancel_popup_question" = "Sind Sie sicher, dass Sie abbrechen möchten?";
+"print_cancel_popup_info" = "Alle Fotobearbeitungen, die Sie für das gedruckte Album ausgewählt haben, werden gelöscht. Sie müssen die Fotos erneut auswählen und bearbeiten.";
+"no_right_print_popup_title" = "Sie haben Ihr Recht zum Drucken genutzt";
+"no_right_print_popup_info" = "Sie haben das in Ihrem Paket enthaltene Recht zum Fotodruck genutzt. Wenn Ihr Paket erneuert wird, können Sie Ihre Fotos erneut zum Drucken einsenden.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "Dieser Vorgang kann je nach Anzahl der ausgewählten Dateien einige Zeit in Anspruch nehmen.";
