--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2158,5 +2158,65 @@ then {11,99 TRY/Month}*/
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "The file (%@) you are trying to filter could not be found.";
 "contact_us_complaint_cellfie" = "Thanks for contacting us. Your request has been forwarded to Cellfie Mobile for review. We will share with them any necessary information you provide, such as information about your device, lifebox usage information, contact information, and personal information to investigate the issue. Photos/videos and other content you upload to lifebox will not be shared with Cellfie Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
+"Office_Filter_Not_Found" = "The file you tried to filter (%@) was not found.";
+"new_print" = "Create New Print";
+"print_info_popup_title" = "Select 5 Photos";
+"print_info_popup_subtitle" = "Choose up to 5 photos to print this month and have them delivered to your house.";
+"print_info_popup_checkbox" = "Don't show this warning again.";
+"print_select_photo_button" = "Select Photo";
+"print_select_photo_screen" = "Select Photo";
+"print_select_photo_screen_bar" = "Selected for printing";
+"print_continue_button" = "Continue";
+"print_missing_photo_popup_title" = "You are sending %d number of photos to print";
+"print_missing_photo_popup_subtitle" = "You have %d more photos to send. If you continue, you will not be able to send the remaining %d photos this month.";
+"create_cell_popup" = "Create Worksheet";
+"create_slide_popup" = "Create Slide";
+"kktc_restore_info" = "Kuzey Kıbrıs Turkcell customers can start their membership to their line by typing LIFEBOX 50GB for 50GB lifebox package, LIFEBOX 500GB for lifebox 500GB package and LIFEBOX 2.5TB for lifebox 2.5TB package and send to 3030.";
+"edit_printphoto_info_label" = "Click on the photo to edit";
+"print_edit_photo_page_name" = "Edit Photo";
+"print_photo_bad_quality_info" = "The photo you selected is smaller than %d MB. There will be a loss in print quality.";
+"print_photo_bad_quality_continue" = "Continue with the selected photo.";
+"print_photo_bad_quality_new" = "Choose a different photo.";
+"no_print_package_info" = "This feature is not available in your existing packages.";
+"print_package_question" = "Do you want to view your print package?";
+"print_package_view" = "View Package";
+"printed_photo_card_title" = "My Print Package";
+"printed_photo_card_info" = "Have 5 photos printed each month.";
+"printed_photo_card_body" = "Have your photos printed.";
+"printed_photo_card_body_no_right" = "You've used your photo printing rights.";
+"printed_photo_card_info_no_right" = "You can reprint as of the %d date.";
+"printed_package_view" = "View My Print Packages";
+"more_photo_right" = "You've got %d more photo submission. Are you sure you want to continue?";
+"no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
+"timeline_header" = "The best memories of 2023";
+"timeline_description" = "We have compiled the best memories of this year for you. Check them out now!";
+"selected_for_print" = "Selected for printing";
+"print_cancel_popup_question" = "Are you sure you want to cancel?";
+"print_cancel_popup_info" = "All photo edits you have selected for the printed album will be deleted. You will need to select and edit photos again.";
+"no_right_print_popup_title" = "You've used your right to print";
+"no_right_print_popup_info" = "You have used the photo printing right included in your package. When your package is renewed, you can send your photos for printing again.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "This process may take time depending on the number of files selected.";
