--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2136,10 +2136,67 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Crear Collage";
 "collage_create_info" = "Haga clic en más para crear un collage";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "No se pudo encontrar el archivo (%@) que intenta filtrar.";
 "contact_us_complaint_cellfie" = "Gracias por contactarnos. Su solicitud ha sido reenviada a Cellfie Mobile para su revisión. Compartiremos con ellos cualquier información necesaria que proporcione, como información sobre su dispositivo, información de uso de lifebox, información de contacto e información personal para investigar el problema. Las fotos/videos y otro contenido que cargue en lifebox no se compartirán con Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
+"Office_Filter_Not_Found" = "El archivo (%@) que ha intentado filtrar no se ha encontrado.";
+"new_print" = "Crea Una Nueva Impresión";
+"print_info_popup_title" = "Seleccionar 5 Fotos";
+"print_info_popup_subtitle" = "Elige hasta 5 fotos para imprimir este mes y recíbelas en tu casa.";
+"print_info_popup_checkbox" = "No vuelvas a mostrar esta advertencia.";
+"print_select_photo_button" = "Seleccionar Foto";
+"print_select_photo_screen" = "Seleccionar Foto";
+"print_select_photo_screen_bar" = "Seleccionado para impresión";
+"print_continue_button" = "Continuar";
+"print_missing_photo_popup_title" = "Estás enviando %d número de fotos a imprimir";
+"print_missing_photo_popup_subtitle" = "Te quedan %d fotos por enviar. Si continúas, no podrás enviar las %d fotos restantes este mes.";
+"create_cell_popup" = "Crear Una Hoja De Cálculo";
+"create_slide_popup" = "Crear una Presentación";
+"kktc_restore_info" = "Los clientes de Kuzey Kıbrıs Turkcell pueden iniciar su membresía en su línea escribiendo LIFEBOX 50GB para el paquete lıfebox de 50GB, LIFEBOX 500GB para el paquete lifebox de 500GB y LIFEBOX 2.5TB para el paquete lifebox de 2.5TB y enviar a 3030.";
+"edit_printphoto_info_label" = "Haz clic en la foto para editarla";
+"print_edit_photo_page_name" = "Editar Foto";
+"print_photo_bad_quality_info" = "La foto seleccionada es inferior a %d MB. Habrá una pérdida en la calidad de impresión.";
+"print_photo_bad_quality_continue" = "Continúa con la foto seleccionada.";
+"print_photo_bad_quality_new" = "Elija una foto diferente";
+"no_print_package_info" = "Esta función no está disponible en los paquetes existentes.";
+"print_package_question" = "¿Desea ver su paquete de impresión?";
+"print_package_view" = "Ver Paquete";
+"printed_photo_card_title" = "Mi Paquete de Impresión";
+"printed_photo_card_info" = "Imprime 5 fotos cada mes.";
+"printed_photo_card_body" = "Imprime tus fotos.";
+"printed_photo_card_body_no_right" = "Has usado tus derechos de impresión de fotos.";
+"printed_photo_card_info_no_right" = "Puede reimprimir a partir de la fecha %d.";
+"printed_package_view" = "Ver mis paquetes de impresión";
+"more_photo_right" = "Tienes %d más envío de fotos. ¿Está seguro de que desea continuar?";
+"no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
+"timeline_header" = "Los mejores recuerdos de 2023";
+"timeline_description" = "Hemos recopilado los mejores recuerdos de este año para ti. ¡Compruébalos ahora!";
+"selected_for_print" = "Seleccionado para impresión";
+"print_cancel_popup_question" = "¿Seguro que quieres cancelarlo?";
+"print_cancel_popup_info" = "Se borrarán todas las ediciones de fotos que hayas seleccionado para el álbum impreso. Tendrás que volver a seleccionar y editar las fotos.";
+"no_right_print_popup_title" = "Ha Utilizado su Derecho a Imprimir";
+"no_right_print_popup_info" = "Ha utilizado el derecho de impresión de fotos incluido en su paquete. Cuando se renueve su paquete, puede enviar sus fotos para imprimir nuevamente.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "Este proceso puede tardar dependiendo del número de archivos seleccionados.";
