--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2108,10 +2108,67 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Создать Коллаж";
 "collage_create_info" = "Нажмите плюс, чтобы создать коллаж";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Файл (%@), который вы пытаетесь фильтровать, не найден.";
 "contact_us_complaint_cellfie" = "Спасибо, что обратились к нам. Ваш запрос был перенаправлен в Cellfie Mobile для рассмотрения. Мы поделимся с ними любой необходимой информацией, которую вы предоставите, такой как информация о вашем устройстве, информация об использовании lifebox, контактная информация и личная информация для расследования проблемы. Фотографии/видео и другой контент, который вы загружаете в lifebox, не будут доступны Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
+"Office_Filter_Not_Found" = "Файл, который вы пытались отфильтровать (%@), не найден.";
+"new_print" = "Создать Новую Печать";
+"print_info_popup_title" = "Выберите 5 Фотографий";
+"print_info_popup_subtitle" = "Выберите до 5 фотографий для печати в этом месяце и получите их на дом.";
+"print_info_popup_checkbox" = "Больше не показывать это предупреждение.";
+"print_select_photo_button" = "Выбрать Фотографию";
+"print_select_photo_screen" = "Выбрать Фотографию";
+"print_select_photo_screen_bar" = "Выбрано Для Печати";
+"print_continue_button" = "Продолжить";
+"print_missing_photo_popup_title" = "Вы отправляете на печать %d количество фотографий";
+"print_missing_photo_popup_subtitle" = "Вам осталось отправить еще %d фотографий. Если Вы продолжите, то не сможете отправить оставшиеся %d фотографий в этом месяце";
+"create_cell_popup" = "Создать Рабочий Лист";
+"create_slide_popup" = "Создать Презентацию";
+"kktc_restore_info" = "Клиенты Turkcell Kuzey Kıbrıs могут начать подписку на своей линии, набрав LIFEBOX 50GB для пакета lifebox 50 ГБ, LIFEBOX 500GB для пакета lifebox 500 ГБ и LIFEBOX 2.5TB для пакета lifebox 2,5 ТБ и отправив на номер 3030.";
+"edit_printphoto_info_label" = "Нажмите на фотографию, чтобы отредактировать ее";
+"print_edit_photo_page_name" = "Редактировать Фотографию";
+"print_photo_bad_quality_info" = "Выбранная фотография имеет размер менее %d МБ. Это приведет к потере качества печати.";
+"print_photo_bad_quality_continue" = "Продолжить работу с выбранной фотографией.";
+"print_photo_bad_quality_new" = "Выберите другую фотографию.";
+"no_print_package_info" = "Эта функция недоступна в существующих пакетах.";
+"print_package_question" = "Вы хотите просмотреть пакет печати?";
+"print_package_view" = "Обзор Пакета";
+"printed_photo_card_title" = "Мой Пакет Печати";
+"printed_photo_card_info" = "Печатать 5 фотографий каждый месяц.";
+"printed_photo_card_body" = "Распечатайте свои фотографии.";
+"printed_photo_card_body_no_right" = "Вы использовали свое право на печать фотографий.";
+"printed_photo_card_info_no_right" = "Вы можете снова создавать печать, начиная с %d даты.";
+"printed_package_view" = "Посмотреть мои пакеты печати.";
+"more_photo_right" = "У вас есть еще %d фотографий для отправки. Вы уверены, что хотите продолжить?";
+"no_more_photo_right" = "Вы выбрали более %d фотографий. Уменьшите, чтобы продолжить.";
+"timeline_header" = "Лучшие воспоминания 2023 года";
+"timeline_description" = "Мы собрали для вас лучшие воспоминания этого года. Посмотрите их прямо сейчас!";
+"selected_for_print" = "Выбрано для печати";
+"print_cancel_popup_question" = "Вы уверены, что хотите отказаться?";
+"print_cancel_popup_info" = "Все фотографии, выбранные для печатного альбома, будут удалены. Вам придется выбирать и редактировать фотографии заново.";
+"no_right_print_popup_title" = "Вы использовали Право на Печать";
+"no_right_print_popup_info" = "Вы использовали право на печать фотографий, включенное в ваш пакет. Когда пакет будет обновлен, вы сможете снова отправить свои фотографии на печать.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "Этот процесс может занять некоторое время в зависимости от количества выбранных файлов.";
