--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2096,3 +2096,63 @@ then {11,99 TRY/Month}*/
 "contact_us_complaint_cellfie" = "გმადლობთ, რომ დაგვიკავშირდით. მოთხოვნა განსახილველად გადაეცა სელფი მობაილს . საკითხის დასამუშავებლად,მათ გავუზიარებთ შენს მიერ მოწოდებულ ყველა საჭირო ინფორმაციას, როგორიცაა ინფორმაცია შენს მოწყობილობაზე, Lifebox-ის გამოყენების ინფორმაცია, საკონტაქტო დეტალები და პერსონალური ინფორმაცია. ფოტოები/ვიდეოები და სხვა კონტენტი, რომელსაც ატვირთავ Lifebox-ში, არ იქნება გაზიარებული სელფი მობაილთან.";
 "Office_Filter_Not_Found" = "";
 "new_print" = "";
+"print_info_popup_title" = "";
+"print_info_popup_subtitle" = "";
+"print_info_popup_checkbox" = "";
+"print_select_photo_button" = "";
+"print_select_photo_screen" = "";
+"print_select_photo_screen_bar" = "";
+"print_continue_button" = "";
+"print_missing_photo_popup_title" = "";
+"print_missing_photo_popup_subtitle" = "";
+"create_cell_popup" = "";
+"create_slide_popup" = "";
+"kktc_restore_info" = "";
+"edit_printphoto_info_label" = "";
+"print_edit_photo_page_name" = "";
+"print_photo_bad_quality_info" = "";
+"print_photo_bad_quality_continue" = "";
+"print_photo_bad_quality_new" = "";
+"no_print_package_info" = "";
+"print_package_question" = "";
+"print_package_view" = "";
+"printed_photo_card_title" = "";
+"printed_photo_card_info" = "";
+"printed_photo_card_body" = "";
+"printed_photo_card_body_no_right" = "";
+"printed_photo_card_info_no_right" = "";
+"printed_package_view" = "";
+"more_photo_right" = "";
+"no_more_photo_right" = "";
+"timeline_header" = "";
+"timeline_description" = "";
+"selected_for_print" = "";
+"print_cancel_popup_question" = "";
+"print_cancel_popup_info" = "";
+"no_right_print_popup_title" = "";
+"no_right_print_popup_info" = "";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "ამ პროცესს შეიძლება დასჭირდეს დრო, დამოკიდებულია არჩეული ფაილების რაოდენობაზე.";
