--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2094,10 +2094,67 @@ then {11,99 TRY/Month}*/
 "create_collage" = "Creați Colaj";
 "collage_create_info" = "Faceți clic pe plus pentru a crea un colaj";
 "create_collage_select_collage" = "";
-"office_filter_not_found" = "";
-"contact_us_complaint_cellfie" = "Vă mulțumim că ne-ați contactat. Cererea dvs. a fost transmis la Cellfie Mobile pentru examinare. Vom împărtăși cu ei orice informații necesare pe care le furnizați, cum ar fi informații despre dispozitivul dvs., informații despre utilizarea lifebox, informații de contact și informații personale pentru a investiga problema. Fotografiile/videoclipurile și alt conținut pe care îl încărcați în lifebox nu vor fi partajate cu Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
 "office_filter_not_found" = "Fișierul (%@) pe care încercați să îl filtrați nu a putut fi găsit.";
 "contact_us_complaint_cellfie" = "Vă mulțumim că ne-ați contactat. Cererea dvs. a fost transmis la Cellfie Mobile pentru examinare. Vom împărtăși cu ei orice informații necesare pe care le furnizați, cum ar fi informații despre dispozitivul dvs., informații despre utilizarea lifebox, informații de contact și informații personale pentru a investiga problema. Fotografiile/videoclipurile și alt conținut pe care îl încărcați în lifebox nu vor fi partajate cu Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
+"Office_Filter_Not_Found" = "Fișierul pe care ați încercat să îl filtrați (%@) nu a fost găsit.";
+"new_print" = "Creați o Nouă İmprimare";
+"print_info_popup_title" = "Selectați 5 Fotografii";
+"print_info_popup_subtitle" = "Alege până la 5 fotografii pe care să le tipărești luna aceasta și să le primești la domiciliu.";
+"print_info_popup_checkbox" = "Nu mai afișați acest avertisment.";
+"print_select_photo_button" = "Selectați Fotografia";
+"print_select_photo_screen" = "Selectați Fotografia";
+"print_select_photo_screen_bar" = "Selectată pentru imprimare";
+"print_continue_button" = "Continuă";
+"print_missing_photo_popup_title" = "Trimiteți %d număr de fotografii pentru imprimare";
+"print_missing_photo_popup_subtitle" = "Mai aveți %d fotografii de trimis. Dacă continuați, nu veți putea trimite restul de %d fotografii rămase în această lună.";
+"create_cell_popup" = "Creați Foaie de Lucru";
+"create_slide_popup" = "Creați Diapozitiv";
+"kktc_restore_info" = "Kuzey Kıbrıs clienții Turkcell pot începe abonamentul la linia lor tastând LIFEBOX 50GB pentru pachetul lifebox 50GB, LIFEBOX 500GB pentru pachetul lifebox 500GB și LIFEBOX 2.5TB pentru pachetul lifebox 2.5TB și trimiteți la 3030.";
+"edit_printphoto_info_label" = "Faceți clic pe fotografie pentru a o edita";
+"print_edit_photo_page_name" = "Editați Fotografia";
+"print_photo_bad_quality_info" = "Fotografia pe care ați selectat-o este mai mică de %d MB. Va exista o pierdere a calității imprimării.";
+"print_photo_bad_quality_continue" = "Continuați cu fotografia selectată.";
+"print_photo_bad_quality_new" = "Alegeți o altă fotografie.";
+"no_print_package_info" = "Această funcție nu este disponibilă în pachetele dvs. existente.";
+"print_package_question" = "Doriți să vizualizați pachetul dvs. de imprimare?";
+"print_package_view" = "Vizualizați Pachetul";
+"printed_photo_card_title" = "Pachetul Meu de İmprimare";
+"printed_photo_card_info" = "Primiți 5 fotografii imprimate în fiecare lună.";
+"printed_photo_card_body" = "Imprimați-vă fotografiile.";
+"printed_photo_card_body_no_right" = "V-ați folosit drepturile de imprimare foto.";
+"printed_photo_card_info_no_right" = "Puteți retipări începând cu data de %d.";
+"printed_package_view" = "Vizualizați Pachetele mele de imprimare.";
+"more_photo_right" = "Aveți mai mult de %d fotografii trimise. Sunteți sigur că doriți să continuați?";
+"no_more_photo_right" = "Ați selectat mai mult de %d fotografii. Reduceți pentru a continua.";
+"timeline_header" = "Les meilleurs souvenirs de 2023";
+"timeline_description" = "Nous avons compilé pour vous les meilleurs souvenirs de cette année. Découvrez-les dès maintenant!";
+"selected_for_print" = "Selectate pentru imprimare";
+"print_cancel_popup_question" = "Sunteți sigur că doriți să anulați?";
+"print_cancel_popup_info" = "Toate editările de fotografii pe care le-ați selectat pentru albumul tipărit vor fi șterse. Va trebui să selectați și să editați din nou fotografiile.";
+"no_right_print_popup_title" = "V-ați folosit dreptul de a imprima";
+"no_right_print_popup_info" = "Ați utilizat dreptul de imprimare a fotografiilor inclus în pachetul dvs. La reînnoirea pachetului dvs. puteți trimite din nou fotografiile pentru imprimare.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
+"toast_message_delete_notification" = "Acest proces poate dura în funcție de numărul de fișiere selectate.";
