--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2197,3 +2197,5 @@ then {11,99 TRY/Month}*/
 "sent_print_info_popup_body" = "";
 "address_title_placeholder" = "";
 "select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
