--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2401,43 +2401,43 @@ then {11,99 TRY/Month}*/
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "Le fichier (%@) que vous essayez de filtrer est introuvable.";
 "contact_us_complaint_cellfie" = "Merci de nous avoir contacté. Votre demande a été transmise à Cellfie Mobile pour examen. Nous partagerons avec eux toutes les informations nécessaires que vous fournissez, telles que des informations sur votre appareil, des informations sur l'utilisation de lifebox, des informations de contact et des informations personnelles pour enquêter sur le problème. Les photos/vidéos et autres contenus que vous téléchargez sur lifebox ne seront pas partagés avec Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
-"print_info_popup_title" = "";
-"print_info_popup_subtitle" = "";
-"print_info_popup_checkbox" = "";
-"print_select_photo_button" = "";
-"print_select_photo_screen" = "";
-"print_select_photo_screen_bar" = "";
-"print_continue_button" = "";
-"print_missing_photo_popup_title" = "";
-"print_missing_photo_popup_subtitle" = "";
-"create_cell_popup" = "";
-"create_slide_popup" = "";
+"Office_Filter_Not_Found" = "Le fichier que vous avez essayé de filtrer (%@) n'a pas été trouvé.";
+"new_print" = "Créer une Nouvelle Impression";
+"print_info_popup_title" = "Sélectionnez 5 Photos";
+"print_info_popup_subtitle" = "Choisissez jusqu'à 5 photos à imprimer ce mois-ci et faites-les livrer chez vous.";
+"print_info_popup_checkbox" = "N'affichez plus cet avertissement.";
+"print_select_photo_button" = "Sélectionner une Photo";
+"print_select_photo_screen" = "Sélectionner une Photo";
+"print_select_photo_screen_bar" = "Sélectionné pour l'impression";
+"print_continue_button" = "Continuer";
+"print_missing_photo_popup_title" = "Vous envoyez %d nombre de photos à imprimer";
+"print_missing_photo_popup_subtitle" = "Il vous reste %d photos à envoyer. Si vous continuez, vous ne pourrez pas envoyer les %d photos restantes ce mois-ci";
+"create_cell_popup" = "Créer une Feuille de Travail";
+"create_slide_popup" = "Créer une Diapositive";
 "kktc_restore_info" = "Les clients de Kuzey Kıbrıs Turkcell peuvent commencer leur abonnement à leur ligne en tapant LIFEBOX 50GB pour le forfait lifebox 50 Go, LIFEBOX 500GB pour le forfait lifebox 500 Go et LIFEBOX 2.5TB pour le forfait lifebox 2,5 To et envoyer au 3030.";
-"edit_printphoto_info_label" = "";
-"print_edit_photo_page_name" = "";
-"print_photo_bad_quality_info" = "";
-"print_photo_bad_quality_continue" = "";
-"print_photo_bad_quality_new" = "";
-"no_print_package_info" = "";
-"print_package_question" = "";
-"print_package_view" = "";
-"printed_photo_card_title" = "";
-"printed_photo_card_info" = "";
-"printed_photo_card_body" = "";
-"printed_photo_card_body_no_right" = "";
-"printed_photo_card_info_no_right" = "";
-"printed_package_view" = "";
-"more_photo_right" = "";
-"no_more_photo_right" = "";
-"timeline_header" = "";
-"timeline_description" = "";
-"selected_for_print" = "";
-"print_cancel_popup_question" = "";
-"print_cancel_popup_info" = "";
-"no_right_print_popup_title" = "";
-"no_right_print_popup_info" = "";
+"edit_printphoto_info_label" = "Cliquez sur la photo à modifier";
+"print_edit_photo_page_name" = "Modifier la Photo";
+"print_photo_bad_quality_info" = "La photo que vous avez sélectionnée est inférieure à %d MB. Il y aura une perte de qualité d'impression.";
+"print_photo_bad_quality_continue" = "Continuer avec la photo sélectionnée.";
+"print_photo_bad_quality_new" = "Choisir une autre photo.";
+"no_print_package_info" = "Cette fonction n'est pas disponible dans vos forfaits existants.";
+"print_package_question" = "Voulez-vous visualiser votre forfait d'impression?";
+"print_package_view" = "Visualiser le Forfait";
+"printed_photo_card_title" = "Mon Forfait d'Impression";
+"printed_photo_card_info" = "Faites imprimer 5 photos par mois.";
+"printed_photo_card_body" = "Faites imprimer vos photos.";
+"printed_photo_card_body_no_right" = "Vous avez utilisé vos droits d'impression de photos.";
+"printed_photo_card_info_no_right" = "Vous pouvez réimprimer à partir de la date %d.";
+"printed_package_view" = "Voir mes forfaits d'impression.";
+"more_photo_right" = "Vous avez sélectionné plus de %d photos. Etes-vous sûr de vouloir continuer?";
+"no_more_photo_right" = "Vous avez sélectionné plus de %d photos. Réduisez pour continuer.";
+"timeline_header" = "Les meilleurs souvenirs de 2023";
+"timeline_description" = "Nous avons compilé pour vous les meilleurs souvenirs de cette année. Découvrez-les dès maintenant!";
+"selected_for_print" = "Sélectionnées pour l'impression";
+"print_cancel_popup_question" = "Êtes-vous sûr de vouloir annuler?";
+"print_cancel_popup_info" = "Toutes les modifications de photos que vous avez sélectionnées pour l'album imprimé seront supprimées. Vous devrez à nouveau sélectionner et modifier les photos.";
+"no_right_print_popup_title" = "Vous Avez Utilisé Votre Droit d'Impression";
+"no_right_print_popup_info" = "Vous avez utilisé le droit d'impression de photos inclus dans votre forfait. Lorsque votre forfait sera renouvelé, vous pourrez à nouveau envoyer vos photos pour qu'elles soient imprimées.";
 "send_print_button" = "";
 "add_address" = "";
 "send_print_popup_title" = "";
@@ -2460,3 +2460,5 @@ then {11,99 TRY/Month}*/
 "sent_print_info_popup_body" = "";
 "address_title_placeholder" = "";
 "select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
