--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2098,43 +2098,43 @@ then {11,99 TRY/Month}*/
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "Файл (%@), який ви намагаєтесь фільтрувати, не знайдено.";
 "contact_us_complaint_cellfie" = "Дякуємо, що звернулися до нас. Ваш запит було перенаправлено на Cellfie Mobile для розгляду. Ми поділимося з ними будь-якою необхідною інформацією, яку Ви надасте, такою як інформація про ваш пристрій, інформація про використання lifebox, контактна інформація та особиста інформація для розслідування проблеми. Фотографії/відео та інший вміст, який ви завантажуєте в lifebox, не будуть доступні Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
-"print_info_popup_title" = "";
-"print_info_popup_subtitle" = "";
-"print_info_popup_checkbox" = "";
-"print_select_photo_button" = "";
-"print_select_photo_screen" = "";
-"print_select_photo_screen_bar" = "";
-"print_continue_button" = "";
-"print_missing_photo_popup_title" = "";
-"print_missing_photo_popup_subtitle" = "";
-"create_cell_popup" = "";
-"create_slide_popup" = "";
+"Office_Filter_Not_Found" = "Файл, який ви намагалися відфільтрувати (%@), не знайдено.";
+"new_print" = "Створити Новий Друк";
+"print_info_popup_title" = "Виберіть 5 Фотографій";
+"print_info_popup_subtitle" = "Виберіть до 5 фотографій для друку в цьому місяці та отримайте їх додому.";
+"print_info_popup_checkbox" = "Не показуйте це попередження більше.";
+"print_select_photo_button" = "Вибрати Фотографію";
+"print_select_photo_screen" = "Вибрати Фотографію";
+"print_select_photo_screen_bar" = "Вибрано для друку";
+"print_continue_button" = "Продовжити";
+"print_missing_photo_popup_title" = "Ви надсилаєте на друк %d фотографій";
+"print_missing_photo_popup_subtitle" = "Ви маєте надіслати ще %d фотографій. Якщо ви продовжите, ви не зможете надіслати решту %d фотографій у цьому місяці";
+"create_cell_popup" = "Створити Презентацію";
+"create_slide_popup" = "Створити Слайд";
 "kktc_restore_info" = "Клієнти Turkcell Kuzey Kıbrıs можуть почати підписку на своїй лінії, набравши LIFEBOX 50GB для пакету lifebox 50 ГБ, LIFEBOX 500GB для пакету lifebox 500 ГБ і LIFEBOX 2.5TB для пакету lifebox 2,5 ТБ і відправивши на номер 3030.";
-"edit_printphoto_info_label" = "";
-"print_edit_photo_page_name" = "";
-"print_photo_bad_quality_info" = "";
-"print_photo_bad_quality_continue" = "";
-"print_photo_bad_quality_new" = "";
-"no_print_package_info" = "";
-"print_package_question" = "";
-"print_package_view" = "";
-"printed_photo_card_title" = "";
-"printed_photo_card_info" = "";
-"printed_photo_card_body" = "";
-"printed_photo_card_body_no_right" = "";
-"printed_photo_card_info_no_right" = "";
-"printed_package_view" = "";
-"more_photo_right" = "";
-"no_more_photo_right" = "";
-"timeline_header" = "";
-"timeline_description" = "";
-"selected_for_print" = "";
-"print_cancel_popup_question" = "";
-"print_cancel_popup_info" = "";
-"no_right_print_popup_title" = "";
-"no_right_print_popup_info" = "";
+"edit_printphoto_info_label" = "Натисніть на фотографію для редагування";
+"print_edit_photo_page_name" = "Редагувати Фотографію";
+"print_photo_bad_quality_info" = "Вибрана вами фотографія має менший розмір, ніж %d МБ. Якість друку буде знижено.";
+"print_photo_bad_quality_continue" = "Продовжуйте з вибраною фотографією.";
+"print_photo_bad_quality_new" = "Вибрати іншу фотографію.";
+"no_print_package_info" = "Ця функція недоступна в існуючих пакетах.";
+"print_package_question" = "Бажаєте переглянути свій пакет для друку?";
+"print_package_view" = "Переглянути Пакет";
+"printed_photo_card_title" = "Мій Пакет Друку";
+"printed_photo_card_info" = "Друкуйте 5 фотографій щомісяця.";
+"printed_photo_card_body" = "Роздрукуйте свої фотографії.";
+"printed_photo_card_body_no_right" = "Ви використали свої права на друк фотографій.";
+"printed_photo_card_info_no_right" = "Ви можете повторно надрукувати їх з дати %d.";
+"printed_package_view" = "Переглянути мої пакети для друку.";
+"more_photo_right" = "Ви вибрали більше ніж %d фотографій. Ви впевнені, що хочете продовжити?";
+"no_more_photo_right" = "Ви вибрали більше %d фотографій. Зменшіть, щоб продовжити.";
+"timeline_header" = "Найкращі спогади 2023 року";
+"timeline_description" = "Ми зібрали для вас найкращі спогади цього року. Перевірте їх зараз!";
+"selected_for_print" = "Вибрано для друку";
+"print_cancel_popup_question" = "Ви впевнені, що хочете скасувати?";
+"print_cancel_popup_info" = "Всі редагування фотографій, які ви вибрали для друкованого альбому, будуть видалені. Вам потрібно буде вибрати та відредагувати фотографії знову.";
+"no_right_print_popup_title" = "Ви використали Право на Друк";
+"no_right_print_popup_info" = "Ви використали право на друк фотографій, що входить до вашого пакету. Коли ваш пакет буде поновлено, ви зможете знову надсилати фотографії на друк.";
 "send_print_button" = "";
 "add_address" = "";
 "send_print_popup_title" = "";
@@ -2157,3 +2157,5 @@ then {11,99 TRY/Month}*/
 "sent_print_info_popup_body" = "";
 "address_title_placeholder" = "";
 "select_city_district" = "";
+"send_print_popup_no_address" = "";
+"grace_banner_text_paycell" = "";
